questionもAPI設計見直したよ
